# license-picker

./: Cargo.toml  LICENSE-MIT  README.md
licenses/: 0bsd.txt  afl-3.0.txt  artistic-2.0.txt  blueoak-1.0.0.txt  bsd-2-clause-patent.txt  cecill-2.1.txt  eupl-1.1.txt  isc.txt  lppl-1.3c.txt  mit-0.txt  mpl-2.0.txt  ms-rl.txt  mulanpsl-2.0.txt  ncsa.txt  odbl-1.0.txt  ofl-1.1.txt  postgresql.txt  upl-1.0.txt  vim.txt  zlib.txt
src/: licenses.rs  main.rs
